--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore _pycache_ file in the app, becuase it's temporary objects created during runtime
-/src/_pycache_
+/src/_pycache_/*
 
 # Ignore the output file
-/src/bin
+/src/bin/*
