--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-Flask==1.1.2
 gunicorn==20.0.4
+matplotlib==3.1.1
+numpy==1.17.2
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
