--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /src/__pycache__/
 
 # Ignore the output file
-/src/bin/
+#/src/bin/
 
 # template from https://github.com/pallets/flask/blob/master/.gitignore
 .DS_Store
