--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ gunicorn==20.0.4
 matplotlib==3.1.1
 numpy==1.17.2
 click==7.1.2
+flask==1.1.2
+requests==2.24.0
 Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
